src/test/deca/context/valid/provided/test07.deca
class A {
    boolean methodglobal(int a, boolean b, float x){
        int d = 5;
        int dd;
        boolean f = true;
        boolean ff;
        float g;
        float gg = 0x5452.1p+5f;
        g = d;
        gg = gg + a;
        ff = f || b;
        f = ff && b && f || f || ff || b;
        x = d/a;
        x = d*a;
        x = d - a;
        print(x);
        print(d/a);
        print(gg/d);
        print(gg*d);
        println(x);
        println(d/a);
        print(d-a);
        println(d-a);
        println(gg/d);
        println(gg*d);
        if (ff){
            print("ca marche");
        }
        else{
            print("ca marche pas");
        }
        while (f){
            println("boooom");
            g = d;
            gg = gg + a;
            ff = f || b;
            f = ff && b && f || f || ff || b;
            x = d/a;
            x = d*a;
            x = d - a;
            print(x);
            print(d/a);
            print(gg/d);
            print(gg*d);
            println(x);
            println(d/a);
            print(d-a);
            println(d-a);
            println(gg/d);
            println(gg*d);
        }
        return true;
    }
    void vide(){
        
    }
}